--- a/Unsupervised_Learning_Project.ipynb
+++ b/Unsupervised_Learning_Project.ipynb
@@ -6,7 +6,7 @@
     "id": "36Ay5AN2k7XP"
    },
    "source": [
-    "# **Unsupervised Learning Practice Project: Fantasy Sports Clustering Analysis**"
+    "# **Unsupervised Learning Project: Fantasy Sports Clustering Analysis**"
    ]
   },
   {
@@ -99,20 +99,13 @@
    },
    "outputs": [],
    "source": [
-    "# Libraries to help me with reading and manipulating data\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "# Libraries to help me with data visualization\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
     "sns.set_theme(style='darkgrid')\n",
-    "\n",
-    "# Removes the limit for the number of displayed columns\n",
     "pd.set_option(\"display.max_columns\", None)\n",
-    "\n",
-    "# Sets the limit for the number of displayed rows\n",
     "pd.set_option(\"display.max_rows\", 200)\n",
     "\n",
     "# To scale the data using z-score\n",
@@ -121,25 +114,23 @@
     "# To compute distances\n",
     "from scipy.spatial.distance import cdist, pdist\n",
     "\n",
-    "# To perform K-means clustering and compute silhouette scores\n",
+    "# K-means clustering and silhouette scores\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_score\n",
     "\n",
-    "# To import K-Medoids\n",
+    "# K-Medoids\n",
     "from sklearn_extra.cluster import KMedoids\n",
     "\n",
-    "# To import DBSCAN and Gaussian Mixture\n",
+    "# DBSCAN and Gaussian Mixture\n",
     "from sklearn.cluster import DBSCAN\n",
     "from sklearn.mixture import GaussianMixture\n",
     "\n",
-    "# To perform hierarchical clustering, compute cophenetic correlation, and create dendrograms\n",
+    "# hierarchical clustering\n",
     "from sklearn.cluster import AgglomerativeClustering\n",
     "from scipy.cluster.hierarchy import dendrogram, linkage, cophenet\n",
     "\n",
-    "# To import PCA\n",
+    "#PCA\n",
     "from sklearn.decomposition import PCA\n",
-    "\n",
-    "# To suppress warnings\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -2391,7 +2382,7 @@
     "pca = PCA(n_components = n, random_state = 1)                                   \n",
     "data_pca = pd.DataFrame(pca.fit_transform(subset_scaled_df ))            \n",
     "\n",
-    "# The percentage of variance explained by each principal component is stored\n",
+    "# Storing the percentage of variance explained by each principal component \n",
     "exp_var = pca.explained_variance_ratio_   \n",
     "exp_var                  "
    ]
@@ -3062,26 +3053,26 @@
    "source": [
     "### **Observations of each cluster:**\n",
     "\n",
-    "- **Cluster 0: ABOVE AVERAGE PLAYERS**\n",
+    "- **Cluster 0:**\n",
     "    - 97 players\n",
     "    - No forwards (maybe more defensive team). \n",
     "    - Average goals scored (~1), Above Average assists (~1.8), Above average total fantasy points scored in the prior season \n",
     "    - High Creativity (~257), High minutes played (~2674), Above average influence score, and a Moderate threat score\n",
     "    - Most of the players got Above Average Bonus points. \n",
-    "- **Cluster 1: STRUGGLING PLAYERS**\n",
+    "- **Cluster 1:**\n",
     "    - 188 players\n",
     "    - Lowest goals scored (~0.1), Lowest assists (~0.2), Lowest total fantasy points  \n",
     "    - Lowest game time, creativity, influence, and threat scores.\n",
     "    - Most of the players got no Bonus points <br>\n",
     "\n",
-    "- **Cluster 2: OUTSTANDING PLAYERS**\n",
+    "- **Cluster 2:**\n",
     "    - 62 players\n",
     "    - No goalkeepers (maybe more  offensive team)\n",
     "    - High goals scored (~9), High assists (~6.7), high total fantasy points\n",
     "    - High game time, high creativity, influence, and threat score.\n",
     "    - Most of the players got high bonus points. <br>\n",
     "\n",
-    "- **Cluster 3: AVERAGE PLAYERS**\n",
+    "- **Cluster 3:**\n",
     "    - 129 players \n",
     "    - Moderate goals scored (~1.5), Moderate assists (~1.6), Moderate total fantasy points\n",
     "    - Moderate game time, a low creativity score, a low influence score, and a Moderate threat score.\n",
@@ -3353,7 +3344,7 @@
    },
    "source": [
     " ### **Characteristics of each cluster**\n",
-    "- **Cluster 0: OUTSTANDING PLAYERS***\n",
+    "- **Cluster 0:**\n",
     "    - 82 players\n",
     "    - High goals scored, High assists, high total fantasy points\n",
     "    - Moderate game time, high creativity, influence, and threat score.\n",
@@ -3361,20 +3352,20 @@
     "    - Moderate Clean Sheets.\n",
     "    \n",
     "\n",
-    "- **Cluster 1: ABOVE AVERAGE PLAYERS**\n",
+    "- **Cluster 1:**\n",
     "    - 97 players\n",
     "    - Few goals and assists, High total fantasy points scored in the prior season \n",
     "    - Moderate Creativity, High minutes played, High influence score, Less threat score\n",
     "    - Most of the players got Moderate Bonus points.\n",
     "\n",
-    "- **Cluster 2: AVERAGE PLAYERS**\n",
+    "- **Cluster 2:**\n",
     "    - 136 players\n",
     "    - Moderate goals scored, assists and total fantasy points\n",
     "    - Low Creativity and influence scores, Moderate game time and threat scores.\n",
     "    - Most of the players got few bonus points.\n",
     "\n",
     "\n",
-    "- **Cluster 3: STRUGGLING PLAYERS**\n",
+    "- **Cluster 3:**\n",
     "    - 171 players\n",
     "    - Most players in this cluster have no goals and assists and did not score any fantasy points.\n",
     "    - Lowest game time, creativity, influence, and threat scores.\n",
@@ -4553,7 +4544,7 @@
    "source": [
     "### **Characteristics of each cluster:**\n",
     "\n",
-    "- **Cluster 0: STRUGGLING PLAYERS**\n",
+    "- **Cluster 0:**\n",
     "    - 422 players\n",
     "    - No goalkeepers, so maybe players have more offensive duties in the team.\n",
     "    - Most players in this cluster have no goals and only 1 assists. Few fantasy points scored in the previous season.\n",
@@ -4562,14 +4553,14 @@
     "    - Low Bonus points (~3)\n",
     "\n",
     "\n",
-    "- **Cluster 1: ABOVE AVERAGE PLAYERS**\n",
+    "- **Cluster 1:**\n",
     "    - 5 players\n",
     "    - Moderate goals and assists and total fantasy points scored in the prior season \n",
     "    - Moderate Creativity, minutes played and influence score, High threat score\n",
     "    - Most of the players got Moderate Bonus points.\n",
     "\n",
     "\n",
-    "- **Cluster 2: AVERAGE PLAYERS**\n",
+    "- **Cluster 2:**\n",
     "    - 46 players\n",
     "    - No forwards, so maybe players have more defensive duties in the team.\n",
     "    - Low goals scored, assists and total fantasy points scored in the prior season \n",
@@ -4577,7 +4568,7 @@
     "    - Most of the players got Few Bonus points.\n",
     "\n",
     "\n",
-    "- **Cluster 3: OUTSTANDING PLAYERS**\n",
+    "- **Cluster 3:**\n",
     "    - 3 players\n",
     "    - High goals scored, assists and total fantasy points\n",
     "    - High game time, creativity, influence, and Moderate threat score.\n",
@@ -5141,25 +5132,25 @@
    "source": [
     "### **Characteristics of each cluster**\n",
     "\n",
-    "- **Cluster 0: ABOVE AVERAGE PLAYERS**\n",
+    "- **Cluster 0:**\n",
     "    - 116 players\n",
     "    - Moderate goals and assists and total fantasy points scored in the prior season \n",
     "    - Moderate Creativity and threat score, High minutes played and influence score\n",
     "    - Most of the players got Moderate Bonus points.\n",
     "\n",
-    "- **Cluster 1: STRUGGLING PLAYERS**\n",
+    "- **Cluster 1:**\n",
     "    - 126 players\n",
     "    - All players in this cluster have no goals and assists. Few fantasy points scored in the previous season.\n",
     "    - Lowest game time, creativity, influence, and threat scores.\n",
     "    - All players did not receive Bonus points\n",
     "\n",
-    "- **Cluster 2: OUTSTANDING PLAYERS**\n",
+    "- **Cluster 2:**\n",
     "    - 105 players\n",
     "    - High goals scored, assists and total fantasy points\n",
     "    - Moderate game time and influence, High creativity and threat score.\n",
     "    - Most of the players got high bonus points. \n",
     "\n",
-    "- **Cluster 3: AVERAGE PLAYERS**\n",
+    "- **Cluster 3:**\n",
     "    - 129 players\n",
     "    - Few goals scored, assists and Low total fantasy points scored in the prior season \n",
     "    - Moderate minutes played, Low Creativity, influence and threat scores\n",
@@ -5209,8 +5200,8 @@
    "outputs": [],
    "source": [
     "# Initializing lists\n",
-    "eps_value = [2,3]                       # Taking random eps value\n",
-    "min_sample_values = [6,20]              # Taking random min_sample value\n",
+    "eps_value = [2,3]                       \n",
+    "min_sample_values = [6,20]             \n",
     "\n",
     "# Creating a dictionary for each of the values in eps_value with min_sample_values\n",
     "res = {eps_value[i]: min_sample_values for i in range(len(eps_value))}  "
@@ -5236,13 +5227,13 @@
    ],
    "source": [
     "# Finding the silhouette_score for each of the combination\n",
-    "high_silhouette_avg = 0                                               # Assigning 0 to the high_silhouette_avg variable\n",
-    "high_i_j = [0, 0]                                                     # Assigning 0's to the high_i_j list\n",
-    "key = res.keys()                                                      # Assigning dictionary keys to a variable called key\n",
+    "high_silhouette_avg = 0                                               \n",
+    "high_i_j = [0, 0]                                                     \n",
+    "key = res.keys()                                                      \n",
     "for i in key:\n",
-    "    z = res[i]                                                        # Assigning dictionary values of each i to z\n",
+    "    z = res[i]                                                        \n",
     "    for j in z:\n",
-    "        db = DBSCAN(eps = i, min_samples = j).fit(dbscan_df)          # Applying DBScan to each of the combinations in dictionary\n",
+    "        db = DBSCAN(eps = i, min_samples = j).fit(dbscan_df)         \n",
     "        core_samples_mask = np.zeros_like(db.labels_, dtype = bool)\n",
     "        core_samples_mask[db.core_sample_indices_] = True\n",
     "        labels = db.labels_\n",
@@ -5251,9 +5242,9 @@
     "            \"For eps value =\" + str(i),\n",
     "            \"For min sample =\" + str(j),\n",
     "            \"The average silhoutte_score is :\",\n",
-    "            silhouette_avg,                                            # Printing the silhouette score for each of the combinations\n",
+    "            silhouette_avg,                                            \n",
     "        )\n",
-    "        if high_silhouette_avg < silhouette_avg:                       # If the silhouette score is greater than 0 or the previous score, it will get appended to the high_silhouette_avg list with its combination of i and j              \n",
+    "        if high_silhouette_avg < silhouette_avg:                       \n",
     "            high_i_j[0] = i\n",
     "            high_i_j[1] = j"
    ]
@@ -5591,15 +5582,15 @@
     "\n",
     "## **Recommendations:**\n",
     "\n",
-    "- In **Cluster 0**, we find the fantasy top-tier players who consistently accumulate higher point totals and even have a strong chance of earning bonus points. To encourage strategic choices and prevent teams from overcrowding with such players due to budget constraints, their prices should be set at a premium level.\n",
+    "- In **Cluster 0**, we find the fantasy **top-tier players** who consistently accumulate higher point totals and even have a strong chance of earning bonus points. To encourage strategic choices and prevent teams from overcrowding with such players due to budget constraints, their prices should be set at a premium level.\n",
     "\n",
-    "- **Cluster 1** consists of players who tend to have limited playing time, often coming in as substitutes, resulting in lower fantasy point yields. These players should be assigned lower price tags, making them attractive differential options.\n",
+    "- **Cluster 1** consists of players who tend to have limited playing time, often coming in as **substitutes**, resulting in lower fantasy point yields. These players should be assigned lower price tags, making them attractive differential options.\n",
     "\n",
-    "- In **Cluster 2**, we identify players who play key roles in their team's performance but may not frequently score or assist, leading to lower fantasy point outputs compared to top-tier players. Their pricing should strike a balance between the above clusters, reflecting their value.\n",
+    "- In **Cluster 2**, we identify **influential players** who play key roles in their team's performance but may not frequently score or assist, leading to lower fantasy point outputs compared to top-tier players. Their pricing should strike a balance between the above clusters, reflecting their value.\n",
     "\n",
-    "- **Cluster 3** encompasses players primarily serving as backup options in case of injuries to the starting ones. Their playing time and fantasy point production are minimal, justifying the lowest pricing among the four clusters.\n",
+    "- **Cluster 3** encompasses players primarily serving as **backup options** in case of injuries to the starting ones. Their playing time and fantasy point production are minimal, justifying the lowest pricing among the four clusters.\n",
     "\n",
-    "- It is crucial to consider players' past-season performances as a benchmark when determining fantasy prices for the upcoming season.\n",
+    "- It is crucial to consider players' past-season performances as well as a benchmark when determining fantasy prices for the upcoming season.\n",
     "\n",
     "- To optimize the fantasy pricing strategy, OnSports should conduct separate cluster analyses for each playing position, as player roles and contributions can vary significantly based on their positions. This approach will result in a more tailored and effective pricing strategy."
    ]
